; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_mach.c_mac_exc_associate_action_label.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_mach.c_mac_exc_associate_action_label.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.exception_action = type { %struct.label* }
%struct.label = type { i32 }

@exc_action_label_associate = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mac_exc_associate_action_label(%struct.exception_action* %0, %struct.label* %1) #0 {
  %3 = alloca %struct.exception_action*, align 8
  %4 = alloca %struct.label*, align 8
  store %struct.exception_action* %0, %struct.exception_action** %3, align 8
  store %struct.label* %1, %struct.label** %4, align 8
  %5 = load %struct.label*, %struct.label** %4, align 8
  %6 = load %struct.exception_action*, %struct.exception_action** %3, align 8
  %7 = getelementptr inbounds %struct.exception_action, %struct.exception_action* %6, i32 0, i32 0
  store %struct.label* %5, %struct.label** %7, align 8
  %8 = load i32, i32* @exc_action_label_associate, align 4
  %9 = load %struct.exception_action*, %struct.exception_action** %3, align 8
  %10 = load %struct.exception_action*, %struct.exception_action** %3, align 8
  %11 = getelementptr inbounds %struct.exception_action, %struct.exception_action* %10, i32 0, i32 0
  %12 = load %struct.label*, %struct.label** %11, align 8
  %13 = call i32 @MAC_PERFORM(i32 %8, %struct.exception_action* %9, %struct.label* %12)
  ret void
}

declare dso_local i32 @MAC_PERFORM(i32, %struct.exception_action*, %struct.label*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
